--- a/sass/layout/_loginPage.scss
+++ b/sass/layout/_loginPage.scss
@@ -44,6 +44,10 @@
       .title {
         margin-bottom: 0.5rem;
 
+        @include breakpoint-up(smPhone) {
+          margin-bottom: 1rem;
+        }
+
         h1 {
           text-transform: uppercase;
           font-size: 2.25rem;
@@ -78,6 +82,10 @@
         flex-direction: column;
         margin-bottom: 1.5rem;
 
+        @include breakpoint-up(smPhone) {
+          margin-bottom: 2rem;
+        }
+
         input {
           padding: 10px;
           background-color: $light-color;
@@ -85,7 +93,11 @@
           border-radius: 12px;
           outline: none;
           font-family: $ff-primary;
-          color: $light-color;
+          color: $secondary-color;
+
+          @include breakpoint-up(smPhone) {
+            padding: 15px;
+          }
 
           &:not(:last-child) {
             margin-bottom: 0.5rem;
@@ -105,6 +117,10 @@
         outline: none;
         font-family: $ff-primary;
         color: $light-color;
+
+        @include breakpoint-up(smPhone) {
+          padding: 15px;
+        }
       }
     }
   }
