mengubah desain title pada login page

--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #00ab4e;
 $secondary-color: #636e72;
-$accent-color: #5cffa5;
+$accent-color: #c0d82c;
 $dark-color: #212529;
 $light-color: #f4f8ff;
 
