--- a/sass/layout/_loginPage.scss
+++ b/sass/layout/_loginPage.scss
@@ -42,22 +42,20 @@
       color: $primary-color;
 
       .title {
-        margin-bottom: 0.5rem;
-
-        @include breakpoint-up(smPhone) {
-          margin-bottom: 1rem;
-        }
+        margin-bottom: 0.25rem;
 
         h1 {
+          font-size: 0.9125rem;
+          font-weight: weight(bold);
+          line-height: 1.1;
           text-transform: uppercase;
-          font-size: 2.25rem;
-          line-height: 1.3;
-        }
+          color: $primary-color;
 
-        h2 {
-          font-size: 1.25rem;
-          font-weight: weight(medium);
-          line-height: 1.3;
+          span {
+            // text-transform: none;
+            font-size: 3.5rem;
+            color: $accent-color;
+          }
         }
       }
 
@@ -88,7 +86,7 @@
 
         input {
           &:not(:last-child) {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.75rem;
           }
         }
       }
