--- a/sass/layout/_loginPage.scss
+++ b/sass/layout/_loginPage.scss
@@ -78,13 +78,27 @@
 
       &-input {
         flex-direction: column;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
 
         @include breakpoint-up(smPhone) {
-          margin-bottom: 2rem;
+          margin-bottom: 1.5rem;
         }
 
-        input {
+        .item {
+          color: $secondary-color;
+          box-shadow: 0px 3px 5px #c6c8cb;
+
+          i {
+            padding: 0 15px;
+          }
+
+          input {
+            flex: 1;
+            box-shadow: none;
+            padding-left: 0;
+            padding-right: 0;
+          }
+
           &:not(:last-child) {
             margin-bottom: 0.75rem;
           }
