--- a/sass/layout/_loginPage.scss
+++ b/sass/layout/_loginPage.scss
@@ -85,8 +85,8 @@
         }
 
         .item {
-          color: $secondary-color;
-          box-shadow: 0px 3px 5px #c6c8cb;
+          color: $primary-color;
+          box-shadow: 0px 3px 6px #c6c8cb;
 
           i {
             padding: 0 15px;
@@ -100,7 +100,7 @@
           }
 
           &:not(:last-child) {
-            margin-bottom: 0.75rem;
+            margin-bottom: 14px;
           }
         }
       }
