--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -26,10 +26,12 @@ input {
   outline: none;
   box-shadow: 0px 3px 5px #d6d8db;
   font-family: $ff-primary;
+  font-size: 0.75rem;
   color: $secondary-color;
 
   @include breakpoint-up(smPhone) {
     padding: 12px;
+    font-size: 1rem;
   }
 
   &::placeholder {
@@ -44,10 +46,12 @@ button {
   border-radius: 4px;
   outline: none;
   font-family: $ff-primary;
+  font-size: 0.75rem;
   color: $light-color;
 
   @include breakpoint-up(smPhone) {
     padding: 12px;
+    font-size: 1rem;
   }
 }
 
