selesai membuat modal pengembalian untuk admin, membuat logic untuk menentukan button register atau kembali, membuat logic untuk mengambil data nomor soa dari table dan dipasang di form register ataupun pengembalian

--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -131,7 +131,7 @@ button {
   background-color: $primary-color !important;
 }
 
-.register-form {
+.admin-action-form {
   margin: 1rem 0;
 
   & > * {
