--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -14,8 +14,8 @@
 
       .btn-terima {
         margin: 1rem 0;
-        text-transform: capitalize;
-        font-size: 1rem;
+        text-transform: uppercase;
+        font-size: 0.75rem;
       }
     }
   }
