--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -4,7 +4,7 @@
       .btn-edit {
         padding: 0;
         background: none;
-        color: $primary-color;
+        // color: $secondary-color;
         font-size: 1rem;
       }
     }
@@ -16,6 +16,7 @@
         margin: 1rem 0;
         text-transform: uppercase;
         font-size: 0.75rem;
+        font-weight: weight(medium);
       }
     }
   }
