selesai bikin halaman terima-dokumen untuk admin

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,4 @@
 @import "./layout/loginPage";
 @import "./layout/dashboardPA";
 @import "./layout/dashboardAdmin";
+@import "./layout/terimaDokumenAdmin";
