--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,4 @@
 @import "./layout/dashboardPA";
 @import "./layout/dashboardAdmin";
 @import "./layout/terimaDokumenAdmin";
+@import "./layout/dashboardKabagAA";
