mengubah bootstrap table menjadi hoverable

--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -107,6 +107,10 @@ button,
 
     &-table {
       thead {
+        tr {
+          background-color: #d6d8db;
+        }
+
         th {
           vertical-align: middle;
           text-align: center;
