berhasil ngebawa nilai soa per table row dan diambil lagi di halaman selanjutnya, dibawa lewat parameter url

--- a/sass/layout/_dashboardKabagAA.scss
+++ b/sass/layout/_dashboardKabagAA.scss
@@ -7,6 +7,7 @@
       text-align: right;
 
       a {
+        color: $light-color;
         margin: 1rem 0;
         text-transform: uppercase;
         font-weight: weight(medium);
