--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -16,6 +16,10 @@ body {
   font-family: $ff-primary;
 }
 
+p {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 
@@ -103,7 +107,7 @@ button,
 
   &__content {
     flex-grow: 1;
-    padding: 0.75rem;
+    padding: 1rem;
 
     &-table {
       thead {
