--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,4 @@
 @import "./layout/dashboardAdmin";
 @import "./layout/terimaDokumenAdmin";
 @import "./layout/dashboardKabagAA";
+@import "./layout/konfirmasiDokumenKabagAA";
