selesai mendesain halaman report

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,4 @@
 @import "./layout/terimaDokumenAdmin";
 @import "./layout/dashboardKabagAA";
 @import "./layout/konfirmasiDokumenKabagAA";
+@import "./layout/report";
