selesai membuat bagian kabag tresuri, dan membuat halaman live update

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,6 @@
 @import "./layout/dashboardPA";
 @import "./layout/dashboardAdmin";
 @import "./layout/terimaDokumenAdmin";
-@import "./layout/dashboardKabagAA";
+@import "./layout/dashboardKabag";
 @import "./layout/konfirmasiDokumenKabagAA";
 @import "./layout/report";
