--- a/sass/layout/_loginPage.scss
+++ b/sass/layout/_loginPage.scss
@@ -97,7 +97,8 @@
           }
 
           input {
-            flex: 1;
+            width: 100%;
+            // flex: 1;
             box-shadow: none;
             padding-left: 0;
             padding-right: 0;
