selesai membangun dan mendesain halaman kadep

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,6 @@
 @import "./layout/dashboardPA";
 @import "./layout/dashboardAdmin";
 @import "./layout/terimaDokumenAdmin";
-@import "./layout/dashboardKabag";
+@import "./layout/dashboardKepala";
 @import "./layout/konfirmasiDokumenKabagAA";
 @import "./layout/report";
