--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -120,6 +120,10 @@ button,
           text-align: center;
           font-size: 0.75rem;
           font-weight: weight(medium);
+
+          @include breakpoint-up(tablet) {
+            font-size: 1rem;
+          }
         }
       }
 
@@ -127,6 +131,10 @@ button,
         font-size: 0.75rem;
         text-align: center;
         text-transform: capitalize;
+
+        @include breakpoint-up(tablet) {
+          font-size: 1rem;
+        }
       }
     }
   }
@@ -140,10 +148,21 @@ button,
     padding-bottom: 1rem;
     background-color: $primary-color;
 
+    @include breakpoint-up(tablet) {
+      padding: 6rem 3rem 1rem 3rem;
+    }
+
     .title {
       color: $light-color;
       font-size: 1.5rem;
       text-transform: capitalize;
+
+      @include breakpoint-up(tablet) {
+        font-size: 2rem;
+      }
+      @include breakpoint-up(smDesktop) {
+        font-size: 2.5rem;
+      }
     }
   }
 }
