--- a/sass/layout/_dashboardPA.scss
+++ b/sass/layout/_dashboardPA.scss
@@ -1,16 +1,34 @@
 .main {
   &__content {
+    @include breakpoint-up(tablet) {
+      padding: 1.5rem;
+    }
+
     &-search {
       margin-bottom: 1rem;
+
+      @include breakpoint-up(tablet) {
+        margin-bottom: 1.5rem;
+      }
 
       .find {
         width: 100%;
         position: relative;
 
+        @include breakpoint-up(tablet) {
+          justify-content: flex-end;
+          width: 40%;
+          margin-left: auto;
+        }
+
         input {
           flex: 1;
           padding: 8px 12px;
-          font-size: 1rem;
+          font-size: 0.75rem;
+
+          @include breakpoint-up(tablet) {
+            font-size: 1rem;
+          }
         }
 
         button {
