--- a/sass/layout/_terimaDokumenAdmin.scss
+++ b/sass/layout/_terimaDokumenAdmin.scss
@@ -6,6 +6,17 @@
       background-color: $secondary-color;
       border-radius: 4px;
 
+      @include breakpoint-up(tablet) {
+        margin-bottom: 1.5rem;
+      }
+      @include breakpoint-up(smDesktop) {
+        margin-top: 0.5rem;
+        margin-bottom: 2rem;
+      }
+      @include breakpoint-up(mdDesktop) {
+        width: fit-content;
+      }
+
       .icon {
         margin-right: 0.75rem;
         color: $accent-color;
@@ -16,6 +27,10 @@
         color: #ccc;
         font-size: 0.75rem;
         align-self: center;
+
+        @include breakpoint-up(smDesktop) {
+          font-size: 1rem;
+        }
       }
     }
 
@@ -31,6 +46,10 @@
 
         &:not(:last-child) {
           margin-bottom: 1rem;
+
+          @include breakpoint-up(smDesktop) {
+            margin-bottom: 1.25rem;
+          }
         }
       }
 
