--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -207,4 +207,29 @@ button,
       color: $dark-color;
     }
   }
+
+  &__permintaan {
+    border-radius: 4px;
+    box-shadow: 0px 3px 5px #d6d8db;
+    background-color: $light-color;
+
+    span {
+      height: 100%;
+      padding: 10px;
+      font-weight: weight(semiBold);
+
+      @include breakpoint-up(smPhone) {
+        padding: 12px;
+        font-size: 1rem;
+      }
+    }
+
+    input {
+      width: 100%;
+      box-shadow: none;
+      background: none;
+      padding-left: 0;
+      font-size: 14px;
+    }
+  }
 }
