--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -142,42 +142,53 @@ button,
 
 .header-container {
   background-color: $primary-color;
-  padding: 2rem 2rem 1rem 2rem;
-
-  @include breakpoint-up(tablet) {
-    padding: 3rem 3rem 1rem 3rem;
-  }
+  padding: 3.5rem 2rem 1.5rem 2rem;
 
   &-content {
-    flex-direction: column;
-
-    @include breakpoint-up(tablet) {
-      height: 100%;
-    }
+    // flex-direction: column;
+    align-items: flex-end;
 
     .logo {
-      width: 150px;
+      flex: 0.8;
 
       @include breakpoint-up(tablet) {
-        width: 175px;
+        flex: 0.5;
       }
-      @include breakpoint-up(smDesktop) {
-        width: 200px;
+
+      img {
+        width: 100%;
       }
     }
 
     .title {
-      margin-top: 4rem;
-      color: $light-color;
-      font-size: 1.5rem;
-      text-transform: capitalize;
-      text-align: right;
+      flex: 1;
 
       @include breakpoint-up(tablet) {
-        font-size: 2rem;
+        flex: 1.5;
       }
-      @include breakpoint-up(smDesktop) {
-        font-size: 2.5rem;
+
+      h1 {
+        width: 50%;
+        margin-left: auto;
+        margin-bottom: 0;
+        text-transform: capitalize;
+        text-align: right;
+        color: $light-color;
+        font-size: 14px;
+
+        @include breakpoint-up(smPhone) {
+          font-size: 1rem;
+        }
+        @include breakpoint-up(lgPhone) {
+          font-size: 1.25rem;
+        }
+        @include breakpoint-up(tablet) {
+          max-width: unset;
+          font-size: 2rem;
+        }
+        @include breakpoint-up(smDesktop) {
+          font-size: 2.5rem;
+        }
       }
     }
   }
