--- a/sass/layout/_dashboardPA.scss
+++ b/sass/layout/_dashboardPA.scss
@@ -24,7 +24,11 @@
         input {
           flex: 1;
           padding: 8px 12px;
-          font-size: 1rem;
+          font-size: 14px;
+
+          @include breakpoint-up(smPhone) {
+            font-size: 1rem;
+          }
         }
 
         button {
