--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -28,7 +28,8 @@ a {
   }
 }
 
-input {
+input,
+.input {
   padding: 10px;
   background-color: $light-color;
   border: none;
@@ -142,10 +143,20 @@ button,
 
 .header-container {
   background-color: $primary-color;
-  padding: 3.5rem 2rem 1.5rem 2rem;
+  padding-top: 3.5rem;
+  padding-bottom: 1.5rem;
+
+  @include breakpoint-up(tablet) {
+    padding-top: 4rem;
+  }
+  @include breakpoint-up(smDesktop) {
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+  }
 
   &-content {
-    // flex-direction: column;
+    width: 80%;
+    margin: 0 auto;
     align-items: flex-end;
 
     .logo {
@@ -154,6 +165,9 @@ button,
       @include breakpoint-up(tablet) {
         flex: 0.5;
       }
+      @include breakpoint-up(mdDesktop) {
+        flex: 0.3;
+      }
 
       img {
         width: 100%;
@@ -161,10 +175,13 @@ button,
     }
 
     .title {
-      flex: 1;
+      flex: 1.2;
 
       @include breakpoint-up(tablet) {
         flex: 1.5;
+      }
+      @include breakpoint-up(mdDesktop) {
+        flex: 1.7;
       }
 
       h1 {
@@ -183,11 +200,16 @@ button,
           font-size: 1.25rem;
         }
         @include breakpoint-up(tablet) {
-          max-width: unset;
-          font-size: 2rem;
+          font-size: 1.5rem;
         }
         @include breakpoint-up(smDesktop) {
-          font-size: 2.5rem;
+          font-size: 2rem;
+        }
+        @include breakpoint-up(mdDesktop) {
+          font-size: 1.75rem;
+        }
+        @include breakpoint-up(lgDesktop) {
+          font-size: 2rem;
         }
       }
     }
