ngurusin banyak hal, terakhir edit logic di halaman report

--- a/sass/layout/_report.scss
+++ b/sass/layout/_report.scss
@@ -1,4 +1,10 @@
 .report {
+  .header-container {
+    .title {
+      color: $light-color;
+    }
+  }
+
   &__content {
     &-box {
       flex-direction: column;
