--- a/sass/layout/_dashboardKepala.scss
+++ b/sass/layout/_dashboardKepala.scss
@@ -2,6 +2,11 @@
   &__content {
     .dropdown {
       margin-bottom: 1rem;
+      color: $light-color;
+
+      @include breakpoint-up(tablet) {
+        margin-bottom: 1.5rem;
+      }
 
       &-toggle {
         @include breakpoint-down(phone) {
@@ -10,8 +15,10 @@
         }
       }
 
-      @include breakpoint-up(tablet) {
-        margin-bottom: 1.5rem;
+      &-item {
+        &:hover {
+          background-color: $accent-color;
+        }
       }
     }
   }
