--- a/sass/layout/_terimaDokumenAdmin.scss
+++ b/sass/layout/_terimaDokumenAdmin.scss
@@ -1,4 +1,4 @@
-.main {
+.terima {
   &__content {
     &-desc {
       margin-bottom: 1rem;
@@ -50,6 +50,28 @@
 
           @include breakpoint-up(smDesktop) {
             margin-bottom: 1.25rem;
+          }
+        }
+      }
+
+      .soa {
+        width: 100%;
+        margin-bottom: 1rem;
+
+        input {
+          margin: 0;
+          margin-right: 1rem;
+          flex-grow: 1;
+        }
+
+        &-format {
+          p {
+            width: max-content;
+            font-size: 0.75rem;
+
+            @include breakpoint-up(smPhone) {
+              font-size: 1rem;
+            }
           }
         }
       }
