--- a/sass/layout/_report.scss
+++ b/sass/layout/_report.scss
@@ -33,5 +33,26 @@
   }
 
   &__content {
+    .dropdown {
+      margin-bottom: 1rem;
+      color: $light-color;
+
+      @include breakpoint-up(tablet) {
+        margin-bottom: 1.5rem;
+      }
+
+      &-toggle {
+        @include breakpoint-down(phone) {
+          width: 100%;
+          padding: 10px;
+        }
+      }
+
+      &-item {
+        &:hover {
+          background-color: $accent-color;
+        }
+      }
+    }
   }
 }
