--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -132,6 +132,7 @@ button,
         font-size: 0.75rem;
         text-align: center;
         text-transform: capitalize;
+        vertical-align: middle;
 
         @include breakpoint-up(tablet) {
           font-size: 1rem;
