--- a/sass/layout/_dashboardKepala.scss
+++ b/sass/layout/_dashboardKepala.scss
@@ -21,5 +21,13 @@
         }
       }
     }
+
+    &-table {
+      table {
+        tbody tr {
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
