nambahin bulan dan tahun di halaman report untuk jumlah realisasi per departemen

--- a/sass/layout/_dashboardAdmin.scss
+++ b/sass/layout/_dashboardAdmin.scss
@@ -14,6 +14,8 @@
       color: $light-color;
 
       .btn-terima {
+        padding-left: 1rem;
+        padding-right: 1rem;
         text-transform: uppercase;
         font-weight: weight(medium);
       }
