--- a/sass/layout/_dashboardPA.scss
+++ b/sass/layout/_dashboardPA.scss
@@ -51,5 +51,26 @@
         }
       }
     }
+
+    #statusfilter {
+      border: none;
+      border-radius: 4px;
+      outline: none;
+      padding: 3px 5px;
+      background: rgba(255, 255, 255, 0.3);
+      color: $dark-color;
+      font-weight: weight(light);
+      font-size: 0.75rem;
+      text-align-last: center;
+      -webkit-appearance: none;
+
+      &:hover {
+        background: rgba(255, 255, 255, 0.45);
+      }
+
+      option {
+        background: #d6d8db;
+      }
+    }
   }
 }
