selesai ubah posisi field status, bikin no regis fixed, bikin warning buat radio button tidak tersedia, tambah field aktivitas di halaman report

--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -242,6 +242,12 @@ button,
     }
   }
 
+  &__noregis {
+    &::placeholder {
+      color: $dark-color;
+    }
+  }
+
   &__permintaan {
     border-radius: 4px;
     box-shadow: 0px 3px 5px #d6d8db;
