--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -3,5 +3,6 @@ $secondary-color: #636e72;
 $accent-color: #c0d82c;
 $dark-color: #212529;
 $light-color: #f4f8ff;
+$red-color: #e74c3c;
 
 $ff-primary: "Poppins", sans-serif;
