--- a/sass/layout/_konfirmasiDokumen.scss
+++ b/sass/layout/_konfirmasiDokumen.scss
@@ -70,6 +70,32 @@
               }
             }
           }
+
+          &-warning {
+            visibility: hidden;
+            display: inline-block;
+            border-radius: 4px;
+            width: 100%;
+            margin-top: 1rem;
+            padding: 3px 0;
+            background-color: rgba($red-color, 0.4);
+            color: $red-color;
+            text-align: center;
+
+            &.show {
+              visibility: visible;
+              animation: kelapKelip 0.6s infinite alternate-reverse;
+            }
+
+            @keyframes kelapKelip {
+              from {
+                background-color: rgba($red-color, 0.4);
+              }
+              to {
+                background-color: rgba($red-color, 0);
+              }
+            }
+          }
         }
 
         .buttons {
