--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -144,15 +144,13 @@ button,
 
 .header-container {
   background-color: $primary-color;
-  padding-top: 3.5rem;
-  padding-bottom: 1.5rem;
+  padding: 1.5rem;
 
   @include breakpoint-up(tablet) {
-    padding-top: 4rem;
+    padding: 2rem;
   }
   @include breakpoint-up(smDesktop) {
-    padding-top: 5rem;
-    padding-bottom: 2rem;
+    padding: 3rem;
   }
 
   &-content {
