--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -264,3 +264,32 @@ button,
     }
   }
 }
+
+// FIELD STATUS DI TABLE
+#statusfilter {
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  padding: 2px 3px;
+  background: rgba(255, 255, 255, 0.3);
+  color: $dark-color;
+  font-weight: weight(medium);
+  font-size: 8px;
+  text-align-last: center;
+  -webkit-appearance: none;
+
+  @include breakpoint-up(smPhone) {
+    font-size: 10px;
+  }
+  @include breakpoint-up(smDesktop) {
+    font-size: 12px;
+  }
+
+  &:hover {
+    background: rgba(255, 255, 255, 0.45);
+  }
+
+  option {
+    background: #d6d8db;
+  }
+}
