--- a/sass/layout/_terimaDokumenAdmin.scss
+++ b/sass/layout/_terimaDokumenAdmin.scss
@@ -58,10 +58,18 @@
         width: 100%;
         margin-bottom: 1rem;
 
+        @include breakpoint-up(tablet) {
+          width: 50%;
+        }
+
         input {
           margin: 0;
           margin-right: 1rem;
           flex-grow: 1;
+
+          @include breakpoint-up(tablet) {
+            flex-grow: unset;
+          }
         }
 
         &-format {
