--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -149,59 +149,98 @@ button,
   &-content {
     width: 80%;
     margin: 0 auto;
-    align-items: flex-end;
+    flex-direction: column;
 
-    .logo {
-      flex: 0.8;
+    .content-top {
+      justify-content: flex-end;
+      margin-bottom: 1.5rem;
 
-      @include breakpoint-up(tablet) {
-        flex: 0.5;
-      }
-      @include breakpoint-up(mdDesktop) {
-        flex: 0.3;
-      }
-
-      img {
-        width: 100%;
-      }
-    }
-
-    .title {
-      flex: 1.2;
-
-      @include breakpoint-up(tablet) {
-        flex: 1.5;
-      }
-      @include breakpoint-up(mdDesktop) {
-        flex: 1.7;
-      }
-
-      h1 {
-        width: 50%;
-        margin-left: auto;
-        margin-bottom: 0;
-        text-transform: capitalize;
-        text-align: right;
+      .user {
         color: $light-color;
-        font-size: 14px;
+        font-size: 0.75rem;
 
         @include breakpoint-up(smPhone) {
           font-size: 1rem;
         }
-        @include breakpoint-up(lgPhone) {
+        @include breakpoint-up(smDesktop) {
           font-size: 1.25rem;
         }
-        @include breakpoint-up(tablet) {
-          font-size: 1.5rem;
+      }
+
+      .logout {
+        padding: 0;
+        margin-left: 1rem;
+        font-size: 0.75rem;
+
+        @include breakpoint-up(smPhone) {
+          font-size: 1rem;
         }
         @include breakpoint-up(smDesktop) {
-          font-size: 2rem;
+          font-size: 1.5rem;
+        }
+
+        &:hover {
+          background: none;
+          color: $accent-color;
+        }
+      }
+    }
+
+    .content-bottom {
+      align-items: flex-end;
+
+      .logo {
+        flex: 0.8;
+
+        @include breakpoint-up(tablet) {
+          flex: 0.5;
         }
         @include breakpoint-up(mdDesktop) {
-          font-size: 1.75rem;
+          flex: 0.3;
         }
-        @include breakpoint-up(lgDesktop) {
-          font-size: 2rem;
+
+        img {
+          width: 100%;
+        }
+      }
+
+      .title {
+        flex: 1.2;
+
+        @include breakpoint-up(tablet) {
+          flex: 1.5;
+        }
+        @include breakpoint-up(mdDesktop) {
+          flex: 1.7;
+        }
+
+        h1 {
+          width: 50%;
+          margin-left: auto;
+          margin-bottom: 0;
+          text-transform: capitalize;
+          text-align: right;
+          color: $light-color;
+          font-size: 14px;
+
+          @include breakpoint-up(smPhone) {
+            font-size: 1rem;
+          }
+          @include breakpoint-up(lgPhone) {
+            font-size: 1.25rem;
+          }
+          @include breakpoint-up(tablet) {
+            font-size: 1.5rem;
+          }
+          @include breakpoint-up(smDesktop) {
+            font-size: 2rem;
+          }
+          @include breakpoint-up(mdDesktop) {
+            font-size: 1.75rem;
+          }
+          @include breakpoint-up(lgDesktop) {
+            font-size: 2rem;
+          }
         }
       }
     }
