--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -171,6 +171,7 @@ button,
         padding: 0;
         margin-left: 1rem;
         font-size: 0.75rem;
+        color: $light-color;
 
         @include breakpoint-up(smPhone) {
           font-size: 1rem;
