--- a/sass/layout/_dashboardKepala.scss
+++ b/sass/layout/_dashboardKepala.scss
@@ -25,7 +25,13 @@
     &-table {
       table {
         tbody tr {
-          cursor: pointer;
+          &.hover-effect {
+            cursor: pointer;
+
+            &:hover {
+              background-color: rgba(0, 0, 0, 0.075);
+            }
+          }
         }
       }
     }
