--- a/sass/helpers/_globals.scss
+++ b/sass/helpers/_globals.scss
@@ -262,57 +262,78 @@ button,
 }
 
 // BUTTON ACTION DI TABLE ADMIN
-.admin-action-form {
-  margin: 1rem 0;
+.popup__container {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
 
-  & > * {
-    width: 100%;
-    font-size: 14px;
-    color: $dark-color;
-
-    &:not(:last-child) {
-      margin-bottom: 1rem;
-    }
-  }
-
-  .btn {
-    margin-top: 2rem;
-  }
-
-  &__soa {
-    &::placeholder {
-      color: $dark-color;
-    }
-  }
-
-  &__noregis {
-    &::placeholder {
-      color: $dark-color;
-    }
-  }
-
-  &__permintaan {
+  &-form {
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    min-width: 300px;
+    padding: 2rem;
     border-radius: 4px;
-    box-shadow: 0px 3px 5px #d6d8db;
-    background-color: $light-color;
+    box-shadow: 0px 4px 15px #aaa;
+    background-color: #fff;
 
-    span {
-      height: 100%;
-      padding: 10px;
-      font-weight: weight(semiBold);
+    & > * {
+      width: 100%;
+      font-size: 14px;
+      color: $dark-color;
 
-      @include breakpoint-up(smPhone) {
-        padding: 12px;
-        font-size: 1rem;
+      &:not(:last-child) {
+        margin-bottom: 1rem;
       }
     }
 
-    input {
-      width: 100%;
-      box-shadow: none;
-      background: none;
-      padding-left: 0;
-      font-size: 14px;
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .btn {
+      color: $light-color;
+
+      &:not(:last-child) {
+        margin-top: 2rem;
+        margin-bottom: 0.5rem;
+      }
+
+      &:last-child {
+        background-color: $red-color;
+      }
+    }
+
+    &-soa {
+      &::placeholder {
+        color: $dark-color;
+      }
+    }
+
+    &-noregis {
+      &::placeholder {
+        color: $dark-color;
+      }
+    }
+
+    &-permintaan {
+      border-radius: 4px;
+      box-shadow: 0px 3px 5px #d6d8db;
+      background-color: $light-color;
+
+      input {
+        width: 100%;
+        box-shadow: none;
+        background: none;
+        padding-left: 0;
+        font-size: 14px;
+      }
     }
   }
 }
