regis reject kelar, masih html

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "./layout/loginPage";
 @import "./layout/dashboardPA";
 @import "./layout/dashboardAdmin";
+@import "./layout/regisReject";
 @import "./layout/terimaDokumenAdmin";
 @import "./layout/dashboardKepala";
 @import "./layout/konfirmasiDokumen";
