--- a/sass/layout/_dashboardKepala.scss
+++ b/sass/layout/_dashboardKepala.scss
@@ -32,6 +32,12 @@
               background-color: rgba(0, 0, 0, 0.075);
             }
           }
+
+          .btn-action {
+            border: 1px solid $primary-color;
+            background: none;
+            color: $primary-color;
+          }
         }
       }
     }
