--- a/sass/layout/_konfirmasiDokumen.scss
+++ b/sass/layout/_konfirmasiDokumen.scss
@@ -62,10 +62,10 @@
             }
 
             &-options {
-              justify-content: space-evenly;
-
               .option {
+                width: 100%;
                 font-weight: weight(light);
+                text-align: center;
                 text-transform: capitalize;
               }
             }
