--- a/sass/layout/_report.scss
+++ b/sass/layout/_report.scss
@@ -33,27 +33,75 @@
   }
 
   &__content {
-    &-dropdown {
+    &-buttons {
+      flex-direction: column;
       gap: 1rem;
-      margin-bottom: 1rem;
 
-      .dropdown {
-        flex: 1;
+      @include breakpoint-up(tablet) {
+        flex-direction: row;
+        justify-content: space-between;
+      }
 
-        @include breakpoint-up(smDesktop) {
-          flex: unset;
+      .download {
+        border-radius: 4px;
+        text-align: center;
+
+        &.single {
+          text-align: left;
         }
 
-        &-toggle {
-          width: 100%;
-          color: $light-color;
-        }
+        a {
+          border-radius: 4px;
+          display: block;
+          padding: 10px;
+          background-color: #d6d8db;
+          font-size: 0.75rem;
+          font-weight: weight(medium);
+          color: $primary-color;
+          text-align: center;
 
-        &-item {
-          cursor: pointer;
+          @include breakpoint-up(smPhone) {
+            padding: 0.75rem;
+            font-size: 1rem;
+          }
 
           &:hover {
-            background-color: $accent-color;
+            text-decoration: none;
+            background-image: linear-gradient(rgba($secondary-color, 0.1));
+          }
+
+          &.single {
+            margin-bottom: 1rem;
+
+            @include breakpoint-up(tablet) {
+              display: inline-block;
+            }
+          }
+        }
+      }
+
+      .date {
+        gap: 1rem;
+        margin-bottom: 1rem;
+
+        .dropdown {
+          flex: 1;
+
+          @include breakpoint-up(smDesktop) {
+            flex: unset;
+          }
+
+          &-toggle {
+            width: 100%;
+            color: $light-color;
+          }
+
+          &-item {
+            cursor: pointer;
+
+            &:hover {
+              background-color: $accent-color;
+            }
           }
         }
       }
