--- a/sass/layout/_report.scss
+++ b/sass/layout/_report.scss
@@ -40,11 +40,16 @@
       @include breakpoint-up(tablet) {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
       }
 
       .download {
         border-radius: 4px;
         text-align: center;
+
+        @include breakpoint-up(tablet) {
+          order: 2;
+        }
 
         &.single {
           text-align: left;
@@ -66,6 +71,7 @@
           }
           @include breakpoint-up(tablet) {
             width: auto;
+            margin-bottom: 1rem;
           }
 
           &:hover {
@@ -83,28 +89,53 @@
         }
       }
 
-      .date {
+      .filter {
+        flex-direction: column;
         gap: 1rem;
         margin-bottom: 1rem;
 
-        .dropdown {
-          flex: 1;
+        @include breakpoint-up(tablet) {
+          flex-direction: row;
+          align-items: flex-end;
+          order: 1;
+        }
 
-          @include breakpoint-up(smDesktop) {
-            flex: unset;
+        &-date {
+          flex-direction: column;
+
+          @include breakpoint-up(tablet) {
+            flex-direction: row;
+            gap: 1rem;
           }
 
-          &-toggle {
+          &-calender {
+            flex-direction: column;
             width: 100%;
-            color: $light-color;
-          }
+            font-size: 0.75rem;
 
-          &-item {
-            cursor: pointer;
-
-            &:hover {
-              background-color: $accent-color;
+            @include breakpoint-up(smPhone) {
+              font-size: 1rem;
             }
+
+            &:not(:last-child) {
+              margin-bottom: 1rem;
+
+              @include breakpoint-up(tablet) {
+                margin: 0;
+              }
+            }
+
+            span {
+              display: block;
+              margin-bottom: 0.5rem;
+              color: $primary-color;
+            }
+          }
+        }
+
+        button {
+          @include breakpoint-up(tablet) {
+            height: fit-content;
           }
         }
       }
