--- a/sass/layout/_konfirmasiDokumen.scss
+++ b/sass/layout/_konfirmasiDokumen.scss
@@ -27,7 +27,7 @@
 
         .info {
           @include breakpoint-up(mdDesktop) {
-            width: 40%;
+            width: 60%;
             margin: 0 auto;
           }
 
@@ -80,6 +80,7 @@
                 label {
                   all: unset;
                   position: relative;
+                  display: inline-block;
                   padding-left: 30px;
                   cursor: pointer;
                   -webkit-user-select: none;
@@ -89,6 +90,10 @@
 
                   @include breakpoint-down(phone) {
                     display: block;
+                  }
+
+                  @include breakpoint-up(tablet) {
+                    width: max-content;
                   }
 
                   &:hover input ~ .checkmark {
